--- a/vis-iterations/02/index.html
+++ b/vis-iterations/02/index.html
@@ -7,8 +7,8 @@
 </head>
 <style>
   svg {
-    height: 500px;
-    width: 500px;
+    height: 760px;
+    width: 1400px;
     border: 1px solid gray;
   }
 </style>
@@ -22,41 +22,44 @@
   <footer>
 <script>
 
-d3.csv('links.csv',function (error,data) { createNetwork(data) });
+d3.json('graph.json', function (error, graph) { createNetwork(graph) });
 
 function onlyUnique(value, index, self) {
   return self.indexOf(value) === index;
 }
 
-function createNetwork(edgelist) {
+function createNetwork(graph) {
   var nodeHash = {};
-  var nodes = [];
+  var nodes = graph.nodes;
   var edges = [];
 
-  edgelist.forEach(function (edge) {
+  // start calling links edges
+  // should just pick one and be consistent
+  graph.links.forEach(function (edge) {
     if (!nodeHash[edge.source]) {
       nodeHash[edge.source] = {
         id: edge.source,
-        label: edge.source
+        label: edge.sourceLabel
       };
       nodes.push(nodeHash[edge.source]);
     }
+
     if (!nodeHash[edge.target]) {
       nodeHash[edge.target] = {
         id: edge.target,
-        label: edge.target
+        label: edge.targetLabel
       };
       nodes.push(nodeHash[edge.target]);
     }
-    if (edge.weight == 4) {
-      edges.push({
-        id: nodeHash[edge.source].id + '-' + nodeHash[edge.target].id,
-        source: nodeHash[edge.source],
-        target: nodeHash[edge.target],
-        weight: edge.weight
-      });
-    }
-  });
+
+    edges.push({
+      id: nodeHash[edge.source].id + "-" + nodeHash[edge.target].id, 
+      source: nodeHash[edge.source],
+      target: nodeHash[edge.target],
+      weight: edge.weight || 1
+    });
+  })
+
   createForceNetwork(nodes, edges);
 }
 
@@ -133,6 +136,7 @@ function modularityCensus(nodes, edges, moduleHash) {
     }
   })
 
+  console.log('modules', modules);
   return {
     nodes: modules,
     edges: moduleEdges
