--- a/vis-iterations/01/index.html
+++ b/vis-iterations/01/index.html
@@ -49,7 +49,12 @@ function createNetwork(edgelist) {
       nodes.push(nodeHash[edge.target]);
     }
     if (edge.weight == 4) {
-      edges.push({id: nodeHash[edge.source].id + "-" + nodeHash[edge.target].id, source: nodeHash[edge.source], target: nodeHash[edge.target], weight: edge.weight});
+      edges.push({
+        id: nodeHash[edge.source].id + "-" + nodeHash[edge.target].id,
+        source: nodeHash[edge.source],
+        target: nodeHash[edge.target],
+        weight: edge.weight
+      });
     }
   });
   createForceNetwork(nodes, edges);
@@ -65,7 +70,9 @@ function modularityCensus(nodes, edges, moduleHash) {
     }
   });
   nodes.forEach(function (node) {
-    var theseEdges = edges.filter(function(d) {return d.source === node || d.target === node});
+    var theseEdges = edges.filter(function (d) {
+      return d.source === node || d.target === node
+    });
 
     var theseSourceModules = theseEdges.map(function (d) {return d.source.module}).filter(onlyUnique);
     var theseTargetModules = theseEdges.map(function (d) {return d.target.module}).filter(onlyUnique);
@@ -118,149 +125,191 @@ function modularityCensus(nodes, edges, moduleHash) {
 
 function createForceNetwork(nodes, edges) {
 
-//create a network from an edgelist
+// create a network from an edgelist
 
-var colors = d3.scale.ordinal().domain([0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]).range(["#996666", "#66CCCC", "#FFFF99", "#CC9999", "#666633", "#993300", "#999966", "#660000", "#996699", "#cc6633", "#ff9966", "#339999", "#6699cc", "#ffcc66", "#ff6600", "#00ccccc"]);
+  var colors = d3.scale.ordinal()
+    .domain([0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15])
+    .range([
+      '#996666',
+      '#66CCCC',
+      '#FFFF99',
+      '#CC9999',
+      '#666633',
+      '#993300',
+      '#999966',
+      '#660000',
+      '#996699',
+      '#cc6633',
+      '#ff9966',
+      '#339999',
+      '#6699cc',
+      '#ffcc66',
+      '#ff6600',
+      '#00ccccc'
+    ]);
 
-var node_data = nodes.map(function (d) {return d.id});
-var edge_data = edges.map(function (d) {return {source: d.source.id, target: d.target.id, weight: 1}; });
+  var node_data = nodes.map(function (d) { return d.id });
+  var edge_data = edges.map(function (d) {
+    return {
+      source: d.source.id,
+      target: d.target.id,
+      weight: 1
+    }; 
+  });
 
-var community = jLouvain().nodes(node_data).edges(edge_data);
-var result  = community();
+  var community = jLouvain()
+    .nodes(node_data)
+    .edges(edge_data);
 
-nodes.forEach(function (node) {
-  node.module = result[node.id]
-});
+  var result  = community();
 
- var modularityGraph = modularityCensus(nodes, edges, result);
+  nodes.forEach(function (node) {
+    node.module = result[node.id]
+  });
+
+  var modularityGraph = modularityCensus(nodes, edges, result);
 
   var mSVG = d3.select("#viz").append("svg")
-  .attr("class", "modularity")
-  .attr("height", 100)
-  .attr("width", 100)
-  .style("height", 100)
-  .style("width", 100)
-  .style("position", "absolute")
-  .style("left", 375)
-  .style("top", 375)
-  .style("background", "white");
+    .attr("class", "modularity")
+    .attr("height", 100)
+    .attr("width", 100)
+    .style("height", 100)
+    .style("width", 100)
+    .style("position", "absolute")
+    .style("left", 375)
+    .style("top", 375)
+    .style("background", "white");
 
   mSVG.selectAll("line")
-  .data(modularityGraph.edges)
-  .enter()
-  .append("line")
-  .attr("class", "modularity")
-  .style("stroke-width", function (d) {return d.weight * 2})
-  .style("stroke", "black");
+    .data(modularityGraph.edges)
+    .enter()
+    .append("line")
+    .attr("class", "modularity")
+    .style("stroke-width", function (d) { return d.weight * 2 })
+    .style("stroke", "black");
 
   mSVG.selectAll("circle")
-  .data(modularityGraph.nodes.filter(function(d) {return d.members.length > 1}))
-  .enter()
-  .append("circle")
-  .attr("class", "modularity")
-  .attr("r", function (d) {return d.members.length})
-  .style("stroke", "black")
-  .style("stroke-width", "1px")
-  .style("fill", function (d) {return d.id == "singletons" ? "lightgray" : colors(d.id)})
-  .on("mouseover", moduleOver)
-  .on("mouseout", moduleOut);
+    .data(modularityGraph.nodes.filter(function (d) {
+      return d.members.length > 1
+    }))
+    .enter()
+    .append("circle")
+    .attr("class", "modularity")
+    .attr("r", function (d) { return d.members.length })
+    .style("stroke", "black")
+    .style("stroke-width", "1px")
+    .style("fill", function (d) {
+      return d.id == "singletons" ? "lightgray" : colors(d.id)
+    })
+    .on("mouseover", moduleOver)
+    .on("mouseout", moduleOut);
 
-  var force = d3.layout.force().nodes(nodes).links(edges)
-  .size([500,500])
-  .charge(-300)
-  .gravity(0.2)
-  .on("tick", updateNetwork);
+  var force = d3.layout.force()
+    .nodes(nodes)
+    .links(edges)
+    .size([500,500])
+    .charge(-300)
+    .gravity(0.2)
+    .on("tick", updateNetwork);
 
   var edgeEnter = d3.select("svg.main").selectAll("g.edge")
-  .data(edges, function (d) {return d.id})
-  .enter()
-  .append("g")
-  .attr("class", "edge");
+    .data(edges, function (d) { return d.id })
+    .enter()
+    .append("g")
+    .attr("class", "edge");
 
   edgeEnter
-  .append("line")
-  .style("stroke-width", function (d) {return d.border ? "3px" : "1px"})
-  .style("stroke", "black")
-  .style("pointer-events", "none");
+    .append("line")
+    .style("stroke-width", function (d) {
+      return d.border ? "3px" : "1px"
+    })
+    .style("stroke", "black")
+    .style("pointer-events", "none");
 
   var nodeEnter = d3.select("svg.main").selectAll("g.node")
-  .data(nodes, function (d) {return d.id})
-  .enter()
-  .append("g")
-  .attr("class", "node")
-  .call(force.drag());
+    .data(nodes, function (d) { return d.id })
+    .enter()
+    .append("g")
+    .attr("class", "node")
+    .call(force.drag());
 
   nodeEnter.append("circle")
-  .attr("r", 8)
-  .style("fill", function (d) {return colors(d.module)})
-  .style("stroke", "black")
-  .style("stroke-width", function (d) {return d.border ? "3px" : "1px"})
+    .attr("r", 8)
+    .style("fill", function (d) { return colors(d.module) })
+    .style("stroke", "black")
+    .style("stroke-width", function (d) {
+      return d.border ? "3px" : "1px"
+    })
 
   nodeEnter.append("text")
-  .style("text-anchor", "middle")
-  .attr("y", 3)
-  .style("stroke-width", "1px")
-  .style("stroke-opacity", 0.75)
-  .style("stroke", "white")
-  .style("font-size", "8px")
-  .text(function (d) {return d.id})
-  .style("pointer-events", "none")
+    .style("text-anchor", "middle")
+    .attr("y", 3)
+    .style("stroke-width", "1px")
+    .style("stroke-opacity", 0.75)
+    .style("stroke", "white")
+    .style("font-size", "8px")
+    .text(function (d) { return d.id })
+    .style("pointer-events", "none")
 
   nodeEnter.append("text")
-  .style("text-anchor", "middle")
-  .attr("y", 3)
-  .style("font-size", "8px")
-  .text(function (d) {return d.id})
-  .style("pointer-events", "none")
+    .style("text-anchor", "middle")
+    .attr("y", 3)
+    .style("font-size", "8px")
+    .text(function (d) { return d.id })
+    .style("pointer-events", "none")
 
   force.start();
 
   function moduleOver(d) {
     console.log("MODULE", d);
+
     d3.select(this)
-    .style("stroke-width", "4px")
+      .style("stroke-width", "4px")
+
     d3.select("svg.main").selectAll("circle")
-    .style("stroke-width", function (p) {return p.module == d.id ? "4px" : "1px"})
+      .style("stroke-width", function (p) {
+        return p.module == d.id ? "4px" : "1px"
+      })
   }
 
   function moduleOut(d) {
     d3.select(this)
-    .style("stroke-width", "1px")
+      .style("stroke-width", "1px")
+
     d3.select("svg.main").selectAll("circle")
-    .style("stroke-width", "1px")
+      .style("stroke-width", "1px")
   }
 
   function updateNetwork() {
     d3.select("svg.main").selectAll("line")
-    .attr("x1", function (d) {return d.source.x})
-    .attr("y1", function (d) {return d.source.y})
-    .attr("x2", function (d) {return d.target.x})
-    .attr("y2", function (d) {return d.target.y});
+      .attr("x1", function (d) { return d.source.x })
+      .attr("y1", function (d) { return d.source.y })
+      .attr("x2", function (d) { return d.target.x })
+      .attr("y2", function (d) { return d.target.y });
 
     d3.select("svg.main").selectAll("g.node")
-      .attr("transform", function (d) {return "translate(" + d.x + "," + d.y + ")"});
+      .attr("transform", function (d) {
+        return "translate(" + d.x + "," + d.y + ")"
+      });
 
     d3.select("svg.modularity").selectAll("circle")
-    .each(function (d) {
-      var theseNodes = d.members;
-      var avgX = d3.mean(theseNodes, function (p) {return p.x});
-      var avgY = d3.mean(theseNodes, function (p) {return p.y});
-      d.x = avgX / 5;
-      d.y = avgY / 5;
-    })
-      .attr("transform", function (d) {return "translate(" + d.x + "," + d.y + ")"});
+      .each(function (d) {
+        var theseNodes = d.members;
+        var avgX = d3.mean(theseNodes, function (p) { return p.x });
+        var avgY = d3.mean(theseNodes, function (p) { return p.y });
+        d.x = avgX / 5;
+        d.y = avgY / 5;
+      })
+      .attr("transform", function (d) {
+        return "translate(" + d.x + "," + d.y + ")"
+      });
 
     d3.select("svg.modularity").selectAll("line")
-    .attr("x1", function (d) {return d.source.x})
-    .attr("y1", function (d) {return d.source.y})
-    .attr("x2", function (d) {return d.target.x})
-    .attr("y2", function (d) {return d.target.y});
-
-
-  }
-
-
-
+      .attr("x1", function (d) { return d.source.x })
+      .attr("y1", function (d) { return d.source.y })
+      .attr("x2", function (d) { return d.target.x })
+      .attr("y2", function (d) { return d.target.y });
+  } 
   function updateModularityNetwork() {
 
   }
