--- a/vis-iterations/01a/index.html
+++ b/vis-iterations/01a/index.html
@@ -57,6 +57,12 @@ function createNetwork(edgelist) {
       });
     }
   });
+
+  console.log('nodeHash', nodeHash);
+  console.log('nodes', nodes);
+  console.log('edges', edges);
+
+
   createForceNetwork(nodes, edges);
 }
 
