--- a/vis-iterations/02/index.html
+++ b/vis-iterations/02/index.html
@@ -1,21 +1,21 @@
 <html>
 <head>
   <title>Linked modularity minimap</title>
-  <meta charset='utf-8' />
-<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
-<script src='jsLouvain.js' type='text/JavaScript'></script>
+  <meta charset="utf-8" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<script src="jsLouvain.js" type="text/JavaScript"></script>
 </head>
 <style>
   svg {
-    height: 8000px;
-    width: 8000px;
+    height: 500px;
+    width: 500px;
     border: 1px solid gray;
   }
 </style>
 <body>
 
-<div id='viz'>
-  <svg class='main'>
+<div id="viz">
+  <svg class="main">
   </svg>
 </div>
 </body>
@@ -60,6 +60,10 @@ function createNetwork(graph) {
     });
   })
 
+  console.log('nodeHash', nodeHash);
+  console.log('nodes', nodes);
+  console.log('edges', edges);
+
   createForceNetwork(nodes, edges);
 }
 
@@ -72,14 +76,13 @@ function modularityCensus(nodes, edges, moduleHash) {
       edge.border = false;
     }
   });
-
   nodes.forEach(function (node) {
     var theseEdges = edges.filter(function (d) {
       return d.source === node || d.target === node
     });
 
-    var theseSourceModules = theseEdges.map(function (d) { return d.source.module }).filter(onlyUnique);
-    var theseTargetModules = theseEdges.map(function (d) { return d.target.module }).filter(onlyUnique);
+    var theseSourceModules = theseEdges.map(function (d) {return d.source.module}).filter(onlyUnique);
+    var theseTargetModules = theseEdges.map(function (d) {return d.target.module}).filter(onlyUnique);
 
     if (theseSourceModules.length > 1 || theseTargetModules.length > 1) {
       node.border = true;
@@ -89,25 +92,25 @@ function modularityCensus(nodes, edges, moduleHash) {
     }
   });
 
-  var modules = nodes.map(function (d) {return d.module})
-  .filter(onlyUnique)
-  .map(function (d) {
-    return {
-      id: d,
-      members: []
-    }
-  });
+  var modules = nodes.map(function (d) { return d.module })
+    .filter(onlyUnique)
+    .map(function (d) {
+      return {
+        id: d,
+        members: []
+      }
+    });
 
   var moduleEdges = [];
   var singletons = {
-    id: 'singletons',
+    id: "singletons",
     members: []
   };
 
   var moduleNodeHash = {};
 
   modules.forEach(function (module) {
-    module.members = nodes.filter(function (d) {
+    module.members = nodes.filter(function (d) { 
       return d.module === module.id
     });
     moduleNodeHash[module.id] = module;
@@ -121,22 +124,27 @@ function modularityCensus(nodes, edges, moduleHash) {
   var moduleEdgeHash = {};
 
   edges.forEach(function (edge) {
-
-    if (!moduleEdgeHash[moduleNodeHash[edge.source.module].id + '-' + moduleNodeHash[edge.target.module].id]) {
+    if (
+      !moduleEdgeHash[moduleNodeHash[edge.source.module].id + "-" +
+        moduleNodeHash[edge.target.module].id]
+    ) {
       var moduleEdge = {
         source: moduleNodeHash[edge.source.module],
         target: moduleNodeHash[edge.target.module],
         weight: 1
       };
-      moduleEdgeHash[moduleNodeHash[edge.source.module].id + '-' + moduleNodeHash[edge.target.module].id] = moduleEdge;
+
+      moduleEdgeHash[moduleNodeHash[edge.source.module].id + "-" +
+        moduleNodeHash[edge.target.module].id] = moduleEdge;
+
       moduleEdges.push(moduleEdge);
     }
     else {
-      moduleEdgeHash[moduleNodeHash[edge.source.module].id + '-' + moduleNodeHash[edge.target.module].id].weight += 1;
+      moduleEdgeHash[moduleNodeHash[edge.source.module].id + "-" +
+        moduleNodeHash[edge.target.module].id].weight += 1;
     }
   })
 
-  console.log('modules', modules);
   return {
     nodes: modules,
     edges: moduleEdges
@@ -145,7 +153,7 @@ function modularityCensus(nodes, edges, moduleHash) {
 
 function createForceNetwork(nodes, edges) {
 
-  //create a network from an edgelist
+// create a network from an edgelist
 
   var colors = d3.scale.ordinal()
     .domain([0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15])
@@ -174,7 +182,7 @@ function createForceNetwork(nodes, edges) {
       source: d.source.id,
       target: d.target.id,
       weight: 1
-    };
+    }; 
   });
 
   var community = jLouvain()
@@ -189,117 +197,133 @@ function createForceNetwork(nodes, edges) {
 
   var modularityGraph = modularityCensus(nodes, edges, result);
 
-  var mSVG = d3.select('#viz').append('svg')
-    .attr('class', 'modularity')
-    .attr('height', 100)
-    .attr('width', 100)
-    .style('height', 100)
-    .style('width', 100)
-    .style('position', 'absolute')
-    .style('left', 375)
-    .style('top', 375)
-    .style('background', 'white');
+  var mSVG = d3.select("#viz").append("svg")
+    .attr("class", "modularity")
+    .attr("height", 100)
+    .attr("width", 100)
+    .style("height", 100)
+    .style("width", 100)
+    .style("position", "absolute")
+    .style("left", 375)
+    .style("top", 375)
+    .style("background", "white");
 
-  mSVG.selectAll('line')
+  mSVG.selectAll("line")
     .data(modularityGraph.edges)
     .enter()
-    .append('line')
-    .attr('class', 'modularity')
-    .style('stroke-width', function (d) { return d.weight * 2 })
-    .style('stroke', 'black');
+    .append("line")
+    .attr("class", "modularity")
+    .style("stroke-width", function (d) { return d.weight * 2 })
+    .style("stroke", "black")
+    .style('stroke-opacity', 0.1);
 
-  mSVG.selectAll('circle')
-    .data(modularityGraph.nodes.filter(function (d) { return d.members.length > 1 }))
+  mSVG.selectAll("circle")
+    .data(modularityGraph.nodes.filter(function (d) {
+      return d.members.length > 1
+    }))
     .enter()
-    .append('circle')
-    .attr('class', 'modularity')
-    .attr('r', function (d) { return d.members.length })
-    .style('stroke', 'black')
-    .style('stroke-width', '1px')
-    .style('fill', function (d) { return d.id == 'singletons' ? 'lightgray' : colors(d.id) })
-    .on('mouseover', moduleOver)
-    .on('mouseout', moduleOut);
+    .append("circle")
+    .attr("class", "modularity")
+    .attr("r", function (d) { return d.members.length })
+    .style("stroke", "black")
+    .style("stroke-width", "1px")
+    .style("fill", function (d) {
+      return d.id == "singletons" ? "lightgray" : colors(d.id)
+    })
+    .style('fill-opacity', 1)
+    .on("mouseover", moduleOver)
+    .on("mouseout", moduleOut);
 
   var force = d3.layout.force()
     .nodes(nodes)
     .links(edges)
     .size([500,500])
     .charge(-300)
-    .gravity(0.2)
-    .on('tick', updateNetwork);
+    .gravity(1)
+    .on("tick", updateNetwork);
 
-  var edgeEnter = d3.select('svg.main').selectAll('g.edge')
+  var edgeEnter = d3.select("svg.main").selectAll("g.edge")
     .data(edges, function (d) { return d.id })
     .enter()
-    .append('g')
-    .attr('class', 'edge');
+    .append("g")
+    .attr("class", "edge");
 
   edgeEnter
-    .append('line')
-    .style('stroke-width', function (d) { return d.border ? '3px' : '1px' })
-    .style('stroke', 'black')
-    .style('pointer-events', 'none');
+    .append("line")
+    .style("stroke-width", function (d) {
+      return d.border ? "3px" : "1px"
+    })
+    .style("stroke", "black")
+    .style('stroke-opacity', 0.1)
+    .style("pointer-events", "none");
 
-  var nodeEnter = d3.select('svg.main').selectAll('g.node')
+  var nodeEnter = d3.select("svg.main").selectAll("g.node")
     .data(nodes, function (d) { return d.id })
     .enter()
-    .append('g')
-    .attr('class', 'node')
+    .append("g")
+    .attr("class", "node")
     .call(force.drag());
 
-  nodeEnter.append('circle')
-    .attr('r', 8)
-    .style('fill', function (d) { return colors(d.module) })
-    .style('stroke', 'black')
-    .style('stroke-width', function (d) { return d.border ? '3px' : '1px'} )
+  nodeEnter.append("circle")
+    .attr("r", 8)
+    .style("fill", function (d) { return colors(d.module) })
+    .style("stroke", "black")
+    .style("stroke-width", function (d) {
+      return d.border ? "3px" : "1px"
+    })
 
-  nodeEnter.append('text')
-    .style('text-anchor', 'middle')
-    .attr('y', 3)
-    .style('stroke-width', '1px')
-    .style('stroke-opacity', 0.75)
-    .style('stroke', 'white')
-    .style('font-size', '8px')
+  nodeEnter.append("text")
+    .style("text-anchor", "middle")
+    .attr("y", 3)
+    .style("stroke-width", "1px")
+    .style("stroke-opacity", 0.75)
+    .style("stroke", "white")
+    .style("font-size", "8px")
     .text(function (d) { return d.id })
-    .style('pointer-events', 'none')
+    .style("pointer-events", "none")
 
-  nodeEnter.append('text')
-    .style('text-anchor', 'middle')
-    .attr('y', 3)
-    .style('font-size', '8px')
+  nodeEnter.append("text")
+    .style("text-anchor", "middle")
+    .attr("y", 3)
+    .style("font-size", "8px")
     .text(function (d) { return d.id })
-    .style('pointer-events', 'none')
+    .style("pointer-events", "none")
 
   force.start();
 
   function moduleOver(d) {
-    console.log('MODULE', d);
+    console.log("MODULE", d);
+
     d3.select(this)
-    .style('stroke-width', '4px')
-    d3.select('svg.main').selectAll('circle')
-    .style('stroke-width', function (p) {return p.module == d.id ? '4px' : '1px'})
+      .style("stroke-width", "4px")
+
+    d3.select("svg.main").selectAll("circle")
+      .style("stroke-width", function (p) {
+        return p.module == d.id ? "4px" : "1px"
+      })
   }
 
   function moduleOut(d) {
     d3.select(this)
-    .style('stroke-width', '1px')
-    d3.select('svg.main').selectAll('circle')
-    .style('stroke-width', '1px')
+      .style("stroke-width", "1px")
+
+    d3.select("svg.main").selectAll("circle")
+      .style("stroke-width", "1px")
   }
 
   function updateNetwork() {
-    d3.select('svg.main').selectAll('line')
-      .attr('x1', function (d) { return d.source.x })
-      .attr('y1', function (d) { return d.source.y })
-      .attr('x2', function (d) { return d.target.x })
-      .attr('y2', function (d) { return d.target.y });
+    d3.select("svg.main").selectAll("line")
+      .attr("x1", function (d) { return d.source.x })
+      .attr("y1", function (d) { return d.source.y })
+      .attr("x2", function (d) { return d.target.x })
+      .attr("y2", function (d) { return d.target.y });
 
-    d3.select('svg.main').selectAll('g.node')
-      .attr('transform', function (d) { 
-        return 'translate(' + d.x + ',' + d.y + ')';
+    d3.select("svg.main").selectAll("g.node")
+      .attr("transform", function (d, i) {
+        return "translate(" + d.x + "," + d.y + ")"
       });
 
-    d3.select('svg.modularity').selectAll('circle')
+    d3.select("svg.modularity").selectAll("circle")
       .each(function (d) {
         var theseNodes = d.members;
         var avgX = d3.mean(theseNodes, function (p) { return p.x });
@@ -307,19 +331,18 @@ function createForceNetwork(nodes, edges) {
         d.x = avgX / 5;
         d.y = avgY / 5;
       })
-      .attr('transform', function (d) {
-        return 'translate(' + d.x + ',' + d.y + ')';
+      .attr("transform", function (d) {
+        return "translate(" + d.x + "," + d.y + ")"
       });
 
-    d3.select('svg.modularity').selectAll('line')
-      .attr('x1', function (d) { return d.source.x })
-      .attr('y1', function (d) { return d.source.y })
-      .attr('x2', function (d) { return d.target.x })
-      .attr('y2', function (d) { return d.target.y });
-  }
-
+    d3.select("svg.modularity").selectAll("line")
+      .attr("x1", function (d) { return d.source.x })
+      .attr("y1", function (d) { return d.source.y })
+      .attr("x2", function (d) { return d.target.x })
+      .attr("y2", function (d) { return d.target.y });
+  } 
   function updateModularityNetwork() {
-  
+
   }
 }
 </script>
